syntax = "proto3";

option go_package = "gitlab.com/ConsenSys/client/fr/core-stack/orchestrate.git/pkg/types/ethereum";

package ethereum;

// Ethereum Log
message Log {
    // DATA (20 Bytes) - Address from which log originated
    // e.g 0xAf84242d70aE9D268E2bE3616ED497BA28A7b62C
    string address = 1;

    // Array of DATA (32 Bytes) - Array of 0 to 4 indexed log arguments
    // e.g. 0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef
    repeated string topics = 2;

    // DATA - Non-indexed arguments of the log
    string data = 3;

    // Log decoded data
    string event = 4;
    map<string, string> decoded_data = 5;

    // QUANTITY - Block number where this transaction was in
    uint64 block_number = 6;

    // DATA (32 Bytes) - Hash of the transaction.
    // e.g. 0x3b198bfd5d2907285af009e9ae84a0ecd63677110d89d7e030251acb87f6487e
    string tx_hash = 7;

    // QUANTITY - Integer of the transactions index position in the block.
    uint64 tx_index = 8;

    // DATA (32 Bytes) - Hash of the block where this transaction was in.
    // e.g. 0x656c34545f90a730a19008c0e7a7cd4fb3895064b48d6d69761bd5abad681056
    string block_hash = 9;

    // QUANTITY - Integer of the log index position in the block
    uint64 index = 10;

    // Removed field is true if this log was reverted due to a chain reorganisation.
    bool removed = 11;
}

// Transaction Receipt
message Receipt {
    // HASH (32 Bytes) - Hash of the transaction.
    // e.g 0x3b198bfd5d2907285af009e9ae84a0ecd63677110d89d7e030251acb87f6487e
    string tx_hash = 1;

    // HASH (32 Bytes) - Hash of the block where this transaction was in.
    // e.g. 0x656c34545f90a730a19008c0e7a7cd4fb3895064b48d6d69761bd5abad681056
    string block_hash = 2;

    // QUANTITY - Block number where this transaction was in.
    uint64 block_number = 3;

    // QUANTITY - Integer of the transactions index position in the block.
    uint64 tx_index = 4;

    // DATA (20 Bytes) - The contract address created, if the transaction was a contract creation
    // e.g 0xAf84242d70aE9D268E2bE3616ED497BA28A7b62C
    string contract_address = 6;

    // DATA (32 Bytes) - State root hash after executing transaction
    // e.g. 0x656c34545f90a730a19008c0e7a7cd4fb3895064b48d6d69761bd5abad681056
    string post_state = 7;

    // QUANTITY - 0 indicates transaction failure , 1 indicates transaction success.
    uint64 status = 8;

    // DATA (256 Bytes) - Bloom filter of logs/events generated by contracts during transaction execution.
    string bloom = 10;

    // Array - Array of log objects, which this transaction generated.
    repeated Log logs = 11;

    // QUANTITY - The amount of gas used by this specific transaction alone.
    uint64 gas_used = 12;

    // QUANTITY - The total amount of gas used when this transaction was executed in the block.
    uint64 cumulative_gas_used = 13;

    // DATA - Revert reason if the transaction failed
    string revert_reason = 14;

    ///////////////////////
    // PRIVATE TX FIELDS //
    ///////////////////////

    // DATA - RLP-encoded return value of a contract call for Orion Priv Tx 
    // Provisional till we migrate to TransactionManager Jobs
    string output = 15;
    
    // DATA (32 bytes) - Orion public key of the sender.
    // e.g A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo=
    string privateFrom = 16;

    // DATA (32 bytes) - Orion public keys or privacy group ID of the recipients.
    // e.g Ko2bVqD+nNlNYL5EE7y3IdOnviftjiizpjRt+HTuFBs=
    repeated string privateFor = 17;

    // DATA (32 bytes) - Orion public keys or privacy group ID of the recipients.
    // e.g Ko2bVqD+nNlNYL5EE7y3IdOnviftjiizpjRt+HTuFBs=
    string privacyGroupId = 18;
}
